Modification du webservice getAllCommune de RADE

--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -54,10 +54,10 @@ info.app.dependencies.popper=${popper.version}
 info.app.dependencies.fontawesome=${fontawesome.version}
 
 # Database Configuration (injected into application-context if configured)
-#db.driver=oracle.jdbc.OracleDriver
-#db.jdbcurl=jdbc:oracle:thin:@RAD-DB-DEV.aesn.fr:1521/AESNDEV
-#db.username=RADE_DEV
-#db.password=password
+db.driver=oracle.jdbc.OracleDriver
+db.jdbcurl=jdbc:oracle:thin:@RAD-DB-DEV.aesn.fr:1521/AESNDEV
+db.username=RADE_DEV
+db.password=password
 
 # Security (Authorization configuration): URL of the Habilitations WebService
 #habilitations.url=http://habilitations-dev.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
