--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -61,6 +61,8 @@ info.app.dependencies.fontawesome=${fontawesome.version}
 
 # Security (Authorization configuration): URL of the Habilitations WebService
 #habilitations.url=http://habilitations-dev.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
+app.service-principal=AESNDEV.FR
+app.keytab-location=file:/etc/rade/krb5.keytab
 
 # Application UI configuration
 app.name=Rade Dev
