--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -94,3 +94,10 @@ logging.file=logs/rade.log
 config.file.xml=classpath:application-default-context.xml
 #config.file.xml=file:/etc/rade/application-context.xml
 #config.file.xml=file:D:/temp/application-context.xml
+
+# CAS Configuration
+cas.service.login=http://10.132.140.20:8080/cas/login
+cas.service.logout=http://10.132.140.20:8080/cas/logout
+cas.url.prefix=http://10.132.140.20:8080/cas/
+app.service.security=http://localhost:8080/login/cas
+app.service.home=http://localhost:8080/
