modification de la configuration de l'authentification : activation du cas paramétrable

--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -95,7 +95,11 @@ config.file.xml=classpath:application-default-context.xml
 #config.file.xml=file:/etc/rade/application-context.xml
 #config.file.xml=file:D:/temp/application-context.xml
 
+# Security (Authorization configuration): URL of the Habilitations WebService
+habilitations.url=http://habilitations-dev.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
+
 # CAS Configuration
+cas.on=true
 cas.service.login=http://10.132.140.20:8080/cas/login
 cas.service.logout=http://10.132.140.20:8080/cas/logout
 cas.url.prefix=http://10.132.140.20:8080/cas/
