--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -99,7 +99,7 @@ config.file.xml=classpath:application-default-context.xml
 habilitations.url=http://habilitations-dev.aesn.fr/Habilitations/services/HabilitationsUtilisateurService?wsdl
 
 # CAS Configuration
-cas.on=true
+cas.active=true
 cas.service.login=http://10.132.140.20:8080/cas/login
 cas.service.logout=http://10.132.140.20:8080/cas/logout
 cas.url.prefix=http://10.132.140.20:8080/cas/
